--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
     <head>
         <title>Kenny's Website</title>
+
+        <style src="css/styles.css" type="text/css"></style>
     </head>
 
     <body>
