basic conditions met

--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
-<DOCTYPE html>
-
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Kenny's Website</title>
+<head>
+  <title>Kenny's Website</title>
+  <link rel="stylesheet" href="./css/styles.css">
+</head>
 
-        <style src="css/styles.css" type="text/css"></style>
-    </head>
-
-    <body>
-        <h1>waddup</h1>
-    </body>
+<body>
+  <h1>heading</h1>
+  <div class="sectionContainer">
+    <section class="desktop-size tablet-size mobile-size">
+        <div class="secHead" id="sec1">subheading 1</div>
+        <article>
+          I am just a dude from Bangalore who wants to do something special with
+          his life, maybe make the world a better place. I like solving problems
+          and that's why I chose Computer Science for my Bachelor of Technology
+          degree. Artificial Intelligence and Machine Learning are the most
+          interesting to me, because, like, how can a computer even do this
+          stuff?
+        </article>
+      </section>
+      <section class="desktop-size tablet-size mobile-size">
+        <div class="secHead" id="sec2">subheading 2</div>
+        <article>
+          I actually like studying, not the way school teaches, but when you
+          actually study to learn something you love. I love playing sports,
+          mainly basketball. Some of my hobbies are investing in stocks, playing
+          video games, and drawing.
+        </article>
+      </section>
+      <section class="desktop-size mobile-size">
+        <div class="secHead" id="sec3">subheading 3</div>
+        <article>
+          My ideal life would be one where I could travel the world non-stop,
+          staying a month or 2 in each place, while coding and investing on the
+          go. As long as I like the problems I keep trying to solve, I'll do any
+          job. I don't want to waste more time doing higher education because
+          it's a scam, honestly, especially in this day and age with the
+          internet. I would love to build something as amazing as the internet.
+          I hope opportunity comes calling.
+        </article>
+      </section>
+  </div>
+</body>
 </html>
