--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Kenny's Website</title>
+  <meta name="viewport" content="width=device-width, initial-zoom=1">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
